--- a/frontend-user/assets/css/styles.css
+++ b/frontend-user/assets/css/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 a {
     text-decoration: none;
@@ -35,6 +36,7 @@ a {
 }
 .logo_header {
     display: flex;
+    align-items: center;
     margin-left: 2%;
     width: 20%;
 }
@@ -75,7 +77,7 @@ a {
         display: none;
     }
     .show_nav {
-        padding-top: 2%;
+        padding-top: 5%;
         display: flex;
         width: 100%;
         height: 100vh;
