--- a/frontend-user/assets/css/styles.css
+++ b/frontend-user/assets/css/styles.css
@@ -16,7 +16,7 @@ a {
     width: 100%;
     padding-top: 2%;
     padding-bottom: 2%;
-    font-size: 20px;
+    font-size: 16px;
 }
 .navbar_toggle {
     margin-left: 5%;
@@ -31,8 +31,8 @@ a {
 .logo {
     margin-left: 5%;
     color: var(--secondary);
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 500;
 }
 .logo_header {
     display: flex;
@@ -68,6 +68,7 @@ a {
 }
 .main_nav li a {
     color: var(--secondary);
+    font-weight: 100;
 }
 @media only screen and (max-width : 992px){
     .navbar {
@@ -98,7 +99,7 @@ a {
     .main_nav li {
         width: 100%;
         height: 50px;
-        font-size: 25px;
+        font-size: 15px;
         justify-content: center;
         text-align: center;
         padding: 0%;
