--- a/frontend-user/assets/css/styles.css
+++ b/frontend-user/assets/css/styles.css
@@ -11,7 +11,7 @@ a {
     --primary: #efcad2;
     --secondary: #000000;
 }
-h2 {
+h2, h1 {
     font-weight: 200;
 }
 img {
@@ -248,9 +248,16 @@ footer {
 .single-product-detail .wishlist, .description p {
     padding-top: 18px;
 }
+.description {
+    padding-top: 30px!important;
+    padding: 0 20px;
+}
 .single-product-detail ul {
     list-style: none;
     font-weight: 100;
+}
+.single-product-detail ul li {
+    line-height: 22px;
 }
 .single-product-detail ul li::before {
     content: "\2022";
@@ -259,4 +266,10 @@ footer {
     display: inline-block;
     width: 1em;
     margin-left: -1em;
+}
+.page-title {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    text-align: center;
+    background-color: #f9f9f9;
 }
