linked single product page

--- a/frontend-user/assets/css/styles.css
+++ b/frontend-user/assets/css/styles.css
@@ -187,6 +187,7 @@ img {
     padding-top: 20px;
     position: relative;
     font-weight: 400;
+    text-transform: capitalize;
 }
 p {
     font-weight: 100;
